# mcp-rec

./: .gitignore  README.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml
src/mcp_rec/: __init__.py  cli.py  recorder.py  replayer.py
