[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rec"
version = "0.1.0"
description = "Record and replay MCP servers — VCR for the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yubinkim444" }]
keywords = ["mcp", "model-context-protocol", "vcr", "record", "replay", "testing", "claude", "cursor", "cline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yubinkim444/mcp-rec"
Repository = "https://github.com/yubinkim444/mcp-rec"
Issues = "https://github.com/yubinkim444/mcp-rec/issues"

[project.scripts]
mcp-rec = "mcp_rec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rec"]
